Fix visibility of errors in form

--- a/less/fix.less
+++ b/less/fix.less
@@ -78,6 +78,10 @@
     margin-top: 190px;
 }
 
+#bb5-ui .help-block {
+    color: red;
+}
+
 .bb-content.bb-content-hover {-webkit-box-shadow:0px 0px 1px 3px rgba(0,0,0,0.2); box-shadow:0px 0px 1px 3px rgba(0,0,0,0.2);}
 
 .bb-content.bb-content-selected {-webkit-box-shadow:0px 0px 1px 3px rgba(227,78,38,0.85); box-shadow:0px 0px 1px 3px rgba(227,78,38,0.85);} /*clicked block -> orange*/
